// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asterisk.md 1`] = `
**123**
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
**123**

`;

exports[`underscore.md 1`] = `
__123__
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
**123**

`;
